--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </style> -->
   </head>
   <body>
+    <main>
     <div class="container">
       <div class="blue-sec">
         <h2>Your Result</h2>
@@ -161,5 +162,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+</main>
   </body>
 </html>
