--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
       </div>
       <div class="white-sec">
-        <div class="summary">Summary</div>
+        <div class="summary"><h1>Summary</h1></div>
 
         <div class="logos one">
           <div class="flex-grp first">
