--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <main>
     <div class="container">
       <div class="blue-sec">
-        <h2>Your Result</h2>
+        <h2 class="result-heading">Your Result</h2>
 
         <div class="percent">
           <span>76</span>
           of 100
         </div>
-
+        
         <h2>Great</h2>
         <p>
           You scored higher than 65% of the people who have taken these tests.
